# ollama_client

./: pyproject.toml  script.py
ollama_client/: __init__.py  _types.py  api.py  client.py
