[tool.poetry]
name = "ollama-client"
version = "0.1.0"
description = ""
authors = ["Romain BOURDAIN <romain.bourdain93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
